--- a/vignettes/TraitDatabaseHarmonization.Rmd
+++ b/vignettes/TraitDatabaseHarmonization.Rmd
@@ -130,7 +130,7 @@ check_harmonized_trait(db_var)
 
 ## Storing harmonized dataset
 
-Harmonized data tables should be preferably stored in compressed **.rds** format. Moreover, all tables should be stored in the same directory, here in the `Products/harmonized/` path.
+Harmonized data tables can be stored in **.csv** text format or compressed **.rds** format. Moreover, all tables should be stored in the same directory, here in the `Products/harmonized/` path.
 
 ```{r, eval = FALSE}
 file_out <- paste0(DB_path, "Products/harmonized/Bartlett_et_al_2016.rds")
@@ -141,7 +141,7 @@ saveRDS(db_post, file_out)
 
 ### List of harmonized trait databases
 
-As mentioned in the introduction, here it is assumed that a set of plant trait databases have been harmonized. In our case, harmonized data files have been stored as **.rds** files in the following path:
+As mentioned in the introduction, here it is assumed that a set of plant trait databases have been harmonized. In our case, harmonized data files have been stored in the following path:
 
 ```{r}
 harmonized_trait_path <- "~/OneDrive/EMF_datasets/PlantTraitDatabases/Products/harmonized"
