added NEWS, MinimumValue, MaximumValue, DOI

--- a/vignettes/TraitDatabaseHarmonization.Rmd
+++ b/vignettes/TraitDatabaseHarmonization.Rmd
@@ -74,15 +74,16 @@ db_var <- db |>
                 Gs_P95 = "Gs 95 (MPa)") 
 ```
 
-Note that we also renamed the column containing the plant species into `originalName`. The original name represents the taxon name that is used by the data set owner/provider and is key for taxonomic harmonization. The result of this step should contain `originalName`, plus one column for each harmonized trait, and (preferably) two columns called `Reference` and `Priority`. We can add those columns manually using:
+Note that we also renamed the column containing the plant species into `originalName`. The original name represents the taxon name that is used by the data set owner/provider and is key for taxonomic harmonization. The result of this step should contain `originalName`, plus one column for each harmonized trait, and (preferably) three columns called `Reference`, `DOI` and `Priority`. We can add those columns manually using:
 
 ```{r}
 db_var <- db_var |>
-  dplyr::mutate(Reference = "Bartlett et al. (2016)",
+  dplyr::mutate(Reference = "Bartlett et al. (2016). The correlations and sequence of plant stomatal, hydraulic, and wilting responses to drought. PNAS 113: 13098-13103",
+                DOI = "10.1073/pnas.1604088113",
                 Priority = 3)
 ```
 
-Column `Reference` indicates the bibliographic source of the data, whereas `Priority` allows defining an order in which trait data sources will be processed. Those with highest priority order (lowest value of `Priority`) will be given preference.
+Columns `Reference` and `DOI` indicates the bibliographic source of the data, whereas `Priority` allows defining an order in which trait data sources will be processed. Those with highest priority order (lowest value of `Priority`) will be given preference.
 
 ```{r}
 db_var
