--- a/vignettes/AllometryDatabaseHarmonization.Rmd
+++ b/vignettes/AllometryDatabaseHarmonization.Rmd
@@ -93,7 +93,8 @@ db_var
 Package **traits4models** currently relies on [World Flora Online](https://www.worldfloraonline.org/) for taxonomic harmonization, via package **WorldFlora** [@kindt_worldflora_2020] available at [CRAN](https://cran.r-project.org/package=WorldFlora). This latter package requires a static copy of the World Flora Online Taxonomic Backbone data that can be downloaded from the [World Flora Online](https://www.worldfloraonline.org/) website. Note that you should use a different DOI reference when reporting your harmonization procedures. We are using here [v.2024.06](https://doi.org/10.5281/zenodo.7460141). We assume the user has already downloaded the backbone and stored it in a file called *classification.csv*. 
 
 ```{r}
-WFO_file <- paste0(DB_path, "../PlantTraitDatabases/WFO_Backbone/classification.csv")
+WFO_file <- paste0("~/OneDrive/mcaceres_work/model_development/medfate_parameterization/Traits&Models/", 
+                   "data-raw/wfo_backbone/classification.csv")
 ```
 
 Taxonomic harmonization is done by calling function `harmonize_taxonomy_WFO()` with a data frame (where notation and units are already harmonized) and the path to the WFO backbone (we omit the console output):
