--- a/vignettes/TraitDatabaseHarmonization.Rmd
+++ b/vignettes/TraitDatabaseHarmonization.Rmd
@@ -38,7 +38,7 @@ library(readr)
 As example for the harmonization process, here we will use data from a Bartlett et al. [-@Bartlett2016]. Much larger data sets can (and should) be processed, but they take much more time. Bartlett et al. provide traits that describe the leaf/stem/root hydraulic vulnerability curves of several species as well as water potential corresponding to stomatal aperture. We start by loading the dataset:
 
 ```{r, message=FALSE}
-DB_path <- "~/OneDrive/mcaceres_work/model_development/medfate_parameterization/Traits&Models/"
+DB_path <- "~/OneDrive/mcaceres_work/model_development/medfate_parameterization/traits_and_models/"
 db <- readr::read_csv(paste0(DB_path, "data-raw/raw_trait_data/Bartlett_et_al_2016/pnas.1604088113.sd01.csv"))
 ```
 
@@ -145,7 +145,7 @@ saveRDS(db_post, file_out)
 As mentioned in the introduction, here it is assumed that a set of plant trait databases have been harmonized. In our case, harmonized data files have been stored in the following path:
 
 ```{r}
-harmonized_trait_path <- "~/OneDrive/mcaceres_work/model_development/medfate_parameterization/Traits&Models/data/harmonized_trait_sources"
+harmonized_trait_path <- "~/OneDrive/mcaceres_work/model_development/medfate_parameterization/traits_and_models/data/harmonized_trait_sources"
 ```
 
 We can list the set of harmonized sources using:
